- fix compile problems after cherry picking from other branch